--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -95,7 +95,7 @@
      "output_type": "stream",
      "text": [
       "Total number of students: 395\n",
-      "Number of features: 31\n",
+      "Number of features: 30\n",
       "Number of students who passed: 265\n",
       "Number of students who failed: 130\n",
       "Graduation rate of the class: 67.09%\n"
@@ -107,7 +107,7 @@
     "n_students = student_data.shape[0]\n",
     "\n",
     "# TODO: Calculate number of features\n",
-    "n_features = student_data.shape[1]\n",
+    "n_features = student_data.shape[1]-1\n",
     "\n",
     "# TODO: Calculate passing students\n",
     "n_passed = student_data[student_data.passed == 'yes'].shape[0]\n",
@@ -347,11 +347,11 @@
     "* **Decision Trees**:\n",
     "    * **Real-world application**: Have been used in predicting stability of the power grid [1]\n",
     "    * **Strengths**: More robust against skewed distributions [2]\n",
-    "    * **Weaknesses**: Susceptible to noise. If there is lots of noise in underlying data set the decision tree shape may change. Also, boundaries for making best decisions are parallel to the axis. It does not take into account that a diagonal boundary may perform better [3]\n",
+    "    * **Weaknesses**: Susceptible to noise. If there is lots of noise in underlying data set the decision tree shape may change. Also, boundaries for making best decisions are parallel to the axis. It does not take into account that a diagonal boundary may perform better [3] Also, overly complex decision trees may overfit the data [8]\n",
     "    * **What makes this a good candidate**: Relatively easy to implement and I don't expect too much noise from the data because the data is likely taken from surveys or from student applications. I would expect noisy data to come from measurement error from a device such as a sensor. \n",
     "* **K-Nearest Neightbors**:\n",
     "    * **Real-world application**: Detection of medical insurance fraud [4]\n",
-    "    * **Strengths**: Requires little training of data before algorithm is ran. \n",
+    "    * **Strengths**: Requires little training of data before algorithm is ran. Also, KNN is robust against noisy data [9]\n",
     "    * **Weaknesses**: Needs data set in memory at runtime to perform classifications. Not good if data set is large.\n",
     "    Also, the model cannot be interpreted [5]\n",
     "    * **What makes this a good candidate**: The dataset is relatively small and so we aren't penalized too much for using this algorithm. \n",
@@ -375,7 +375,11 @@
     "\n",
     "[6] : http://www.uni-obuda.hu/journal/Markoski_Ivankovic_Ratgeber_Pecev_Glusac_57.pdf\n",
     "\n",
-    "[7] : http://www.nickgillian.com/wiki/pmwiki.php/GRT/AdaBoost"
+    "[7] : http://www.nickgillian.com/wiki/pmwiki.php/GRT/AdaBoost\n",
+    "\n",
+    "[8] : http://scikit-learn.org/stable/modules/tree.html\n",
+    "\n",
+    "[9] : http://people.revoledu.com/kardi/tutorial/KNN/Strength%20and%20Weakness.htm"
    ]
   },
   {
@@ -392,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -455,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -465,59 +469,59 @@
      "output_type": "stream",
      "text": [
       "Training a DecisionTreeClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0012 seconds\n",
-      "Made predictions in 0.0004 seconds.\n",
+      "Trained model in 0.0011 seconds\n",
+      "Made predictions in 0.0002 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0002 seconds.\n",
-      "F1 score for test set: 0.6071.\n",
+      "F1 score for test set: 0.6250.\n",
       "Training a KNeighborsClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0007 seconds\n",
-      "Made predictions in 0.0014 seconds.\n",
-      "F1 score for training set: 0.8321.\n",
-      "Made predictions in 0.0013 seconds.\n",
-      "F1 score for test set: 0.7482.\n",
+      "Trained model in 0.0006 seconds\n",
+      "Made predictions in 0.0012 seconds.\n",
+      "F1 score for training set: 0.8060.\n",
+      "Made predictions in 0.0012 seconds.\n",
+      "F1 score for test set: 0.7246.\n",
       "Training a AdaBoostClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.1626 seconds\n",
-      "Made predictions in 0.0123 seconds.\n",
-      "F1 score for training set: 0.9846.\n",
-      "Made predictions in 0.0118 seconds.\n",
-      "F1 score for test set: 0.7576.\n",
+      "Trained model in 0.0752 seconds\n",
+      "Made predictions in 0.0044 seconds.\n",
+      "F1 score for training set: 0.9481.\n",
+      "Made predictions in 0.0043 seconds.\n",
+      "F1 score for test set: 0.7669.\n",
       "Training a DecisionTreeClassifier using a training set size of 200. . .\n",
       "Trained model in 0.0015 seconds\n",
       "Made predictions in 0.0002 seconds.\n",
       "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0021 seconds.\n",
-      "F1 score for test set: 0.7273.\n",
+      "Made predictions in 0.0002 seconds.\n",
+      "F1 score for test set: 0.7287.\n",
       "Training a KNeighborsClassifier using a training set size of 200. . .\n",
       "Trained model in 0.0007 seconds\n",
-      "Made predictions in 0.0029 seconds.\n",
-      "F1 score for training set: 0.8966.\n",
+      "Made predictions in 0.0030 seconds.\n",
+      "F1 score for training set: 0.8800.\n",
       "Made predictions in 0.0017 seconds.\n",
-      "F1 score for test set: 0.7413.\n",
+      "F1 score for test set: 0.7692.\n",
       "Training a AdaBoostClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.1970 seconds\n",
-      "Made predictions in 0.0154 seconds.\n",
-      "F1 score for training set: 0.8921.\n",
-      "Made predictions in 0.0131 seconds.\n",
-      "F1 score for test set: 0.8065.\n",
+      "Trained model in 0.0806 seconds\n",
+      "Made predictions in 0.0053 seconds.\n",
+      "F1 score for training set: 0.8927.\n",
+      "Made predictions in 0.0044 seconds.\n",
+      "F1 score for test set: 0.8281.\n",
       "Training a DecisionTreeClassifier using a training set size of 300. . .\n",
       "Trained model in 0.0020 seconds\n",
-      "Made predictions in 0.0003 seconds.\n",
+      "Made predictions in 0.0002 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0002 seconds.\n",
-      "F1 score for test set: 0.6500.\n",
+      "F1 score for test set: 0.6769.\n",
       "Training a KNeighborsClassifier using a training set size of 300. . .\n",
       "Trained model in 0.0008 seconds\n",
-      "Made predictions in 0.0067 seconds.\n",
-      "F1 score for training set: 0.8807.\n",
+      "Made predictions in 0.0082 seconds.\n",
+      "F1 score for training set: 0.8809.\n",
       "Made predictions in 0.0025 seconds.\n",
-      "F1 score for test set: 0.7313.\n",
+      "F1 score for test set: 0.7801.\n",
       "Training a AdaBoostClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.1891 seconds\n",
-      "Made predictions in 0.0155 seconds.\n",
-      "F1 score for training set: 0.8817.\n",
-      "Made predictions in 0.0117 seconds.\n",
-      "F1 score for test set: 0.7481.\n"
+      "Trained model in 0.0853 seconds\n",
+      "Made predictions in 0.0063 seconds.\n",
+      "F1 score for training set: 0.8637.\n",
+      "Made predictions in 0.0045 seconds.\n",
+      "F1 score for test set: 0.7820.\n"
      ]
     }
    ],
@@ -530,8 +534,8 @@
     "\n",
     "# TODO: Initialize the three models\n",
     "clf_A = tree.DecisionTreeClassifier()\n",
-    "clf_B = KNeighborsClassifier(n_neighbors=3)\n",
-    "clf_C = AdaBoostClassifier(n_estimators=100)\n",
+    "clf_B = KNeighborsClassifier()\n",
+    "clf_C = AdaBoostClassifier()\n",
     "\n",
     "# TODO: Set up the training set sizes\n",
     "X_train_100 = X_train[0:100]\n",
@@ -569,25 +573,25 @@
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |          0.0012         |            0.0002      |      1.00        |     0.6071      |\n",
-    "| 200               |        0.0015           |     0.0021             |      1.00        |    0.7273       |\n",
-    "| 300               |       0.0020            |        0.002           |      1.00        |    0.6500       |\n",
+    "| 100               |          0.0011         |            0.0002      |      1.00        |     0.6250      |\n",
+    "| 200               |        0.0015           |     0.0002             |      1.00        |    0.7287       |\n",
+    "| 300               |       0.0020            |        0.0002           |      1.00        |    0.6769       |\n",
     "\n",
     "** Classifer 2 - K-Nearest Neighbor**  \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |        0.0007           |       0.0013           |   0.8321         |      0.7482     |\n",
-    "| 200               |     0.0007              |      0.0017            |      0.8966      |    0.7413       |\n",
-    "| 300               |         0.0008          |      0.0025            |    0.8807        |     0.7313      |\n",
+    "| 100               |        0.0006           |       0.0012           |   0.8060         |      0.7246     |\n",
+    "| 200               |     0.0007              |      0.0017            |      0.8800      |    0.7692       |\n",
+    "| 300               |         0.0008          |      0.0025            |    0.8809        |     0.7801      |\n",
     "\n",
     "** Classifer 3 - AdaBoost**  \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |   0.1626                |     0.0118             |    0.9846        |  0.7576         |\n",
+    "| 100               |   0.0806                |     0.0044             |    0.8927        |  0.8281         |\n",
     "| 200               |        0.1970           |     0.0131             |   0.8921         |      0.8065     |\n",
-    "| 300               |      0.1891             |      0.0117            |    0.8817        |     0.7481      |"
+    "| 300               |      0.0853             |      0.0045            |    0.8637        |     0.7820      |"
    ]
   },
   {
@@ -610,7 +614,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** The best performing model was AdaBoost. Compared to the decision tree and k-nearest neighbors algorithm, the AdaBoost algorithm had the best F1 score on the test data set on all training sizes. Although its training time and predicition time is lower compared to the other classifiers, the difference is inconsequential. At the largest training set the difference in training time between Adaboost and the fastest classifier time is 0.1883 sec. The difference in prediction times between Adaboost and the fastest classifier time is 0.0097 sec. \n",
+    "**Answer: ** The best performing model was AdaBoost. Compared to the decision tree and k-nearest neighbors algorithm, the AdaBoost algorithm had the best F1 score on the test data set on all training sizes. Although its training time and predicition time is lower compared to the other classifiers, the difference is inconsequential. At the largest training set the difference in training time between Adaboost and the fastest classifier time is 0.0845 sec. The difference in prediction times between Adaboost and the fastest classifier time is 0.0043 sec. \n",
     "\n",
     "Given the increased prediction accuracy and inconsequential difference in training time, my recommendation would be to use the AdaBoost classifier in predicting if a student will graduate."
    ]
@@ -650,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -661,9 +665,9 @@
      "text": [
       "AdaBoostClassifier(algorithm='SAMME.R', base_estimator=None, learning_rate=3,\n",
       "          n_estimators=49, random_state=None)\n",
-      "Made predictions in 0.0084 seconds.\n",
+      "Made predictions in 0.0060 seconds.\n",
       "Tuned model has a training F1 score of 0.8299.\n",
-      "Made predictions in 0.0064 seconds.\n",
+      "Made predictions in 0.0042 seconds.\n",
       "Tuned model has a testing F1 score of 0.8000.\n"
      ]
     }
@@ -713,7 +717,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** The final model's F1 score for training is 0.8299 and the testing score is 0.8000. The untuned model had a training score of 0.8817 which is higher than the tuned model. However, the tuned model had a 2.02% increase in test score. The tune model had a score of 0.800 wherase the original score was 0.7841."
+    "**Answer: ** The final model's F1 score for training is 0.8299 and the testing score is 0.8000. The untuned model had a training score of 0.8637 which is higher than the tuned model. However, the tuned model had a 2.30% increase in test score. The tune model had a score of 0.800 wherase the original score was 0.7820."
    ]
   },
   {
