--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -631,9 +631,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** The student data set was divided into training and testing data. I would feed the training data into the AdaBoost classifier so that it can develop a model in predicting whether a student will graduate. The accuracy of model is then verified using the testing data. \n",
+    "**Answer: ** The student data set was divided into training and testing data. The training data is fed into the AdaBoost classifier so that it can develop a model in predicting whether a student needs intervention or not. The accuracy of model is then verified using the testing data. \n",
     "\n",
-    "The AdaBoost classifier develops a model over time.  The classifier makes an initial model and calculates the error. Based on this error the classifier then determines what area it got wrong. It focuses in this problem area and tries to optimize it to reduce the overall error. When the training is complete the error should be reduced enough to makes a reasonable prediction of the underlying data set."
+    "The AdaBoost classifier develops a complex model of the data set from several simpler models. Each model looks at different aspects of the data. These are combined together to form a complex model, which is more accurate at making predictions than if the simpler models were ran independently of one another. An example would be using all your senses to identify a ripe watermelon. Sight alone might be able to tell you if a watermelon is ripe or not. However, if you add more and more senses you'll gain more confidence that the watermelon is ripe or not.  "
    ]
   },
   {
