added random state

--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -469,56 +469,56 @@
      "output_type": "stream",
      "text": [
       "Training a DecisionTreeClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0011 seconds\n",
+      "Trained model in 0.0010 seconds\n",
       "Made predictions in 0.0002 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0002 seconds.\n",
-      "F1 score for test set: 0.6250.\n",
+      "F1 score for test set: 0.6552.\n",
       "Training a KNeighborsClassifier using a training set size of 100. . .\n",
       "Trained model in 0.0006 seconds\n",
-      "Made predictions in 0.0012 seconds.\n",
+      "Made predictions in 0.0015 seconds.\n",
       "F1 score for training set: 0.8060.\n",
-      "Made predictions in 0.0012 seconds.\n",
+      "Made predictions in 0.0013 seconds.\n",
       "F1 score for test set: 0.7246.\n",
       "Training a AdaBoostClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0752 seconds\n",
-      "Made predictions in 0.0044 seconds.\n",
+      "Trained model in 0.0741 seconds\n",
+      "Made predictions in 0.0046 seconds.\n",
       "F1 score for training set: 0.9481.\n",
-      "Made predictions in 0.0043 seconds.\n",
+      "Made predictions in 0.0044 seconds.\n",
       "F1 score for test set: 0.7669.\n",
       "Training a DecisionTreeClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0015 seconds\n",
+      "Trained model in 0.0014 seconds\n",
       "Made predictions in 0.0002 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0002 seconds.\n",
-      "F1 score for test set: 0.7287.\n",
+      "F1 score for test set: 0.7500.\n",
       "Training a KNeighborsClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0007 seconds\n",
-      "Made predictions in 0.0030 seconds.\n",
+      "Trained model in 0.0006 seconds\n",
+      "Made predictions in 0.0031 seconds.\n",
       "F1 score for training set: 0.8800.\n",
       "Made predictions in 0.0017 seconds.\n",
       "F1 score for test set: 0.7692.\n",
       "Training a AdaBoostClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0806 seconds\n",
-      "Made predictions in 0.0053 seconds.\n",
+      "Trained model in 0.0789 seconds\n",
+      "Made predictions in 0.0054 seconds.\n",
       "F1 score for training set: 0.8927.\n",
-      "Made predictions in 0.0044 seconds.\n",
+      "Made predictions in 0.0043 seconds.\n",
       "F1 score for test set: 0.8281.\n",
       "Training a DecisionTreeClassifier using a training set size of 300. . .\n",
       "Trained model in 0.0020 seconds\n",
       "Made predictions in 0.0002 seconds.\n",
       "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0002 seconds.\n",
-      "F1 score for test set: 0.6769.\n",
+      "Made predictions in 0.0001 seconds.\n",
+      "F1 score for test set: 0.6613.\n",
       "Training a KNeighborsClassifier using a training set size of 300. . .\n",
       "Trained model in 0.0008 seconds\n",
       "Made predictions in 0.0082 seconds.\n",
       "F1 score for training set: 0.8809.\n",
-      "Made predictions in 0.0025 seconds.\n",
+      "Made predictions in 0.0023 seconds.\n",
       "F1 score for test set: 0.7801.\n",
       "Training a AdaBoostClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0853 seconds\n",
-      "Made predictions in 0.0063 seconds.\n",
+      "Trained model in 0.0851 seconds\n",
+      "Made predictions in 0.0062 seconds.\n",
       "F1 score for training set: 0.8637.\n",
       "Made predictions in 0.0045 seconds.\n",
       "F1 score for test set: 0.7820.\n"
@@ -533,9 +533,9 @@
     "\n",
     "\n",
     "# TODO: Initialize the three models\n",
-    "clf_A = tree.DecisionTreeClassifier()\n",
+    "clf_A = tree.DecisionTreeClassifier(random_state= 42)\n",
     "clf_B = KNeighborsClassifier()\n",
-    "clf_C = AdaBoostClassifier()\n",
+    "clf_C = AdaBoostClassifier(random_state= 42)\n",
     "\n",
     "# TODO: Set up the training set sizes\n",
     "X_train_100 = X_train[0:100]\n",
@@ -573,25 +573,25 @@
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |          0.0011         |            0.0002      |      1.00        |     0.6250      |\n",
-    "| 200               |        0.0015           |     0.0002             |      1.00        |    0.7287       |\n",
-    "| 300               |       0.0020            |        0.0002           |      1.00        |    0.6769       |\n",
+    "| 100               |          0.0010         |            0.0002      |      1.00        |     0.6552      |\n",
+    "| 200               |        0.0014           |     0.0002             |      1.00        |    0.7500       |\n",
+    "| 300               |       0.0020            |        0.0001           |      1.00        |    0.6613       |\n",
     "\n",
     "** Classifer 2 - K-Nearest Neighbor**  \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |        0.0006           |       0.0012           |   0.8060         |      0.7246     |\n",
-    "| 200               |     0.0007              |      0.0017            |      0.8800      |    0.7692       |\n",
-    "| 300               |         0.0008          |      0.0025            |    0.8809        |     0.7801      |\n",
+    "| 100               |        0.0006           |       0.0013           |   0.8060         |      0.7246     |\n",
+    "| 200               |     0.0006              |      0.0017            |      0.8800      |    0.7692       |\n",
+    "| 300               |         0.0008          |      0.0023            |    0.8809        |     0.7801      |\n",
     "\n",
     "** Classifer 3 - AdaBoost**  \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |   0.0806                |     0.0044             |    0.8927        |  0.8281         |\n",
-    "| 200               |        0.1970           |     0.0131             |   0.8921         |      0.8065     |\n",
-    "| 300               |      0.0853             |      0.0045            |    0.8637        |     0.7820      |"
+    "| 100               |   0.0741                |     0.0044             |    0.9481        |  0.7669         |\n",
+    "| 200               |        0.0789           |     0.0043             |   0.8927         |      0.8281     |\n",
+    "| 300               |      0.0851             |      0.0045            |    0.8637        |     0.7820      |"
    ]
   },
   {
@@ -614,7 +614,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** The best performing model was AdaBoost. Compared to the decision tree and k-nearest neighbors algorithm, the AdaBoost algorithm had the best F1 score on the test data set on all training sizes. Although its training time and predicition time is lower compared to the other classifiers, the difference is inconsequential. At the largest training set the difference in training time between Adaboost and the fastest classifier time is 0.0845 sec. The difference in prediction times between Adaboost and the fastest classifier time is 0.0043 sec. \n",
+    "**Answer: ** The best performing model was AdaBoost. Compared to the decision tree and k-nearest neighbors algorithm, the AdaBoost algorithm had the best F1 score on the test data set on all training sizes. Although its training time and predicition time is lower compared to the other classifiers, the difference is inconsequential. At the largest training set the difference in training time between Adaboost and the fastest classifier time is 0.0843 sec. The difference in prediction times between Adaboost and the fastest classifier time is 0.0044 sec. \n",
     "\n",
     "Given the increased prediction accuracy and inconsequential difference in training time, my recommendation would be to use the AdaBoost classifier in predicting if a student will graduate."
    ]
